test/fail/die-str.js
var seneca = require('../..')()

seneca.die('foo')
